--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Личный сайт студента GeekBrains</title>
+    <title>Личный сайт ....</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -18,25 +18,23 @@
                         <a href="#">Главная</a>
                     </li>
                     <li>
-                        <a href="#">Венеция</a>
+                        <a href="#">Фотки</a>
                     </li>
                     <li>
-                        <a href="#">Париж</a>
+                        <a href="#">И еще фотки</a>
                     </li>
                 </ul>
             </nav>
         </header>
         <main>
-            <h1>Личный сайт студента GeekBrains</h1>
+            <h1>Личный сайт студента</h1>
             <section>
                 <img src="img/photo.png" alt="Photo">
-                <p>Добрый день. Меня зовут Василий Пупкин. Я - начинающий программист. Я совсем недавно встал на этот путь,
-                    но уже успел написать свой первый сайт. В этом мне помог IT-портал GeekBrains Я очень люблю путешествовать.
-                    На этом сайте вы найдете мои самые любимые фотографии из Венеции и Парижа</p>
+                <p>Далеко-далеко за словесными горами в стране, гласных и согласных живут рыбные тексты. Текстов языкового рыбного парадигматическая, взобравшись приставка дорогу предупредила власти составитель вопроса города необходимыми первую ручеек напоивший коварный которой знаках. Свой, заманивший запятых. Переписывается рот сбить запятых вскоре своих домах подпоясал там прямо. Жаренные, великий? Большого о проектах своего свой дорогу.</p>
             </section>
         </main>
         <footer>
-            Copyright &copy; 2018
+           Copyright &copy; 2018
         </footer>
     </div>
 </body>
