--- a/geekbrains/html_201712/index.html
+++ b/geekbrains/html_201712/index.html
@@ -17,6 +17,9 @@
                 <div class="menuItem"><a href="#">SHOWROOM</a></div>
                 <div class="menuItem"><a href="contacts.html">CONTACT</a></div>
             </div> <img src="img/header/search.png" alt="search" class="search">
+            <?php
+echo "hello";
+?>
             <h4>TRENDING</h4>
             <h2>fishnet chair</h2>
             <p>Seat and back with upholstery made of cold cure foam. Steel frame, available in matt powder-coated black</p> <a href="#" class="order">order us</a>
