--- a/netology/html/lesson_4_1/index.html
+++ b/netology/html/lesson_4_1/index.html
@@ -14,6 +14,7 @@
         <header>
             <div class="center">
                 <section class="main-menu">
+                    <div class="main-menu__center">
                     <div class="main-menu__item logo">
                         <a href="index.html" class="main-meni__logo">
                             <img src="http://image.ibb.co/epHstH/Active_Box.png" alt="Logo" class="main-menu__logo">
@@ -38,6 +39,7 @@
                             </a>
                         </ul>
                     </nav>
+                </div>
                 </section>
                 <section class="header-text">
                     <h1>Your Favorite One Page Multi Purpose Template</h1>
