--- a/netology/html/final-test/version3/index.html
+++ b/netology/html/final-test/version3/index.html
@@ -333,16 +333,16 @@
             <div class="wrapper">
                 <div class="footer__social-links social-links">
                     <div class="social-links__block">
-                        <a href="#" class="social-links__item social-links__item_facebook">
+                        <a href="#" class="social-links__item social-links__item_facebook social-links__item_footer">
                             <div class="pic"></div>
                         </a>
-                        <a href="#" class="social-links__item social-links__item_twitter">
+                        <a href="#" class="social-links__item social-links__item_twitter social-links__item_footer">
                             <div class="pic"></div>
                         </a>
-                        <a href="#" class="social-links__item social-links__item_instagram">
+                        <a href="#" class="social-links__item social-links__item_instagram social-links__item_footer">
                             <div class="pic"></div>
                         </a>
-                        <a href="#" class="social-links__item social-links__item_google-plus">
+                        <a href="#" class="social-links__item social-links__item_google-plus social-links__item_footer">
                             <div class="pic"></div>
                         </a>
                     </div>
