--- a/BosaNoga/index.html
+++ b/BosaNoga/index.html
@@ -353,7 +353,7 @@
         </div>
 
         <div class="new-deals__product new-deals__product_active">
-          <a href="#"></a>
+          <a href="catalogue.html"></a>
           <div class="new-deals__product_favorite"></div>
         </div>
         <div class="new-deals__product new-deals__product_last">
