--- a/BosaNoga/catalogue.html
+++ b/BosaNoga/catalogue.html
@@ -473,7 +473,7 @@
               </div>
             </div>
           </a>
-          <a class="item-list__item-card item" href="#">
+          <a class="item-list__item-card item" href="product-card-desktop.html">
             <div class="item-pic"><img class="item-pic-2" src="img/catalogue-pics/product-catalogue__item-2.png" alt="Ботинки женские">
               <div class="product-catalogue__product_favorite">
                 <p></p>
