--- a/BosaNoga/product-card-desktop.html
+++ b/BosaNoga/product-card-desktop.html
@@ -44,7 +44,7 @@
             <p>Ежедневно: с 09-00 до 21-00</p>
           </div>
           <div class="header-main__logo">
-            <a href="#">
+            <a href="index.html">
               <h1>
                 <img src="img/header-logo.png" alt="logotype">
               </h1>
