--- a/BosaNoga/favorite.html
+++ b/BosaNoga/favorite.html
@@ -196,7 +196,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-2" src="img/catalogue-pics/product-catalogue__item-2.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
