--- a/BosaNoga/favorite.html
+++ b/BosaNoga/favorite.html
@@ -28,7 +28,7 @@
         </div>
         <div class="header-main">
           <div class="header-main__wrapper wrapper">
-            <div class="header-main__phone"><a href="tel:++7-495-790-35-03">+7 495 79 03 5 03</a>
+            <div class="header-main__phone"><a href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
               <p>Ежедневно: с 09-00 до 21-00</p>
             </div>
             <div class="header-main__logo"><a href="index.html">
@@ -58,26 +58,22 @@
             <div class="hidden-panel__basket basket-dropped">
               <div class="basket-dropped__title">В вашей корзине:</div>
               <div class="basket-dropped__product-list product-list">
-                <div class="product-list__item">
-                  <div class="product-list__pic"><img src="img/product-list__pic_1.jpg" alt="product"></div><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
+                <div class="product-list__item"><a class="product-list__pic" href="#"><img src="img/product-list__pic_1.jpg" alt="product"></a><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
                   <div class="product-list__fill"></div>
                   <div class="product-list__price">12 360<i class="fa fa-rub" aria-hidden="true"></i></div>
                   <div class="product-list__delete"><i class="fa fa-times" aria-hidden="true"></i></div>
                 </div>
-                <div class="product-list__item">
-                  <div class="product-list__pic"><img src="img/product-list__pic_1.jpg" alt="product"></div><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
+                <div class="product-list__item"><a class="product-list__pic" href="#"><img src="img/product-list__pic_1.jpg" alt="product"></a><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
                   <div class="product-list__fill"></div>
                   <div class="product-list__price">12 360<i class="fa fa-rub" aria-hidden="true"></i></div>
                   <div class="product-list__delete"><i class="fa fa-times" aria-hidden="true"></i></div>
                 </div>
-                <div class="product-list__item">
-                  <div class="product-list__pic"><img src="img/product-list__pic_1.jpg" alt="product"></div><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
+                <div class="product-list__item"><a class="product-list__pic" href="#"><img src="img/product-list__pic_1.jpg" alt="product"></a><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
                   <div class="product-list__fill"></div>
                   <div class="product-list__price">12 360<i class="fa fa-rub" aria-hidden="true"></i></div>
                   <div class="product-list__delete"><i class="fa fa-times" aria-hidden="true"></i></div>
                 </div>
-                <div class="product-list__item">
-                  <div class="product-list__pic"><img src="img/product-list__pic_1.jpg" alt="product"></div><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
+                <div class="product-list__item"><a class="product-list__pic" href="#"><img src="img/product-list__pic_1.jpg" alt="product"></a><a class="product-list__product" href="#">Ботинки женские, Baldinini</a>
                   <div class="product-list__fill"></div>
                   <div class="product-list__price">12 360<i class="fa fa-rub" aria-hidden="true"></i></div>
                   <div class="product-list__delete"><i class="fa fa-times" aria-hidden="true"></i></div>
@@ -89,21 +85,21 @@
         <nav class="main-menu">
           <div class="wrapper">
             <ul class="main-menu__items">
-              <li class="main-menu__item main-menu__item_sales"><a href="#">АКЦИИ</a></li>
-              <li class="main-menu__item main-menu__item_women"><a href="#">ЖЕНСКАЯ ОБУВЬ</a></li>
-              <li class="main-menu__item main-menu__item_men"><a href="#">МУЖСКАЯ ОБУВЬ</a></li>
-              <li class="main-menu__item main-menu__item_kids"><a href="#">ДЕТСКАЯ ОБУВЬ</a></li>
-              <li class="main-menu__item main-menu__item_accessories"><a href="#">АКСЕССУАРЫ</a></li>
-              <li class="main-menu__item main-menu__item_home"><a href="#">ДЛЯ ДОМА</a></li>
-              <li class="main-menu__item main-menu__item_brands"><a href="#">БРЕНДЫ</a></li>
-              <li class="main-menu__item main-menu__item_new"><a href="#">НОВИНКИ</a></li>
+              <li class="main-menu__item main-menu__item_sales"><a href="#">акции</a></li>
+              <li class="main-menu__item main-menu__item_women"><a href="#">Женская обувь</a></li>
+              <li class="main-menu__item main-menu__item_men"><a href="#">Мужская обувь</a></li>
+              <li class="main-menu__item main-menu__item_kids"><a href="#">Детская обувь</a></li>
+              <li class="main-menu__item main-menu__item_accessories"><a href="#">аксессуары</a></li>
+              <li class="main-menu__item main-menu__item_home"><a href="#">для дома</a></li>
+              <li class="main-menu__item main-menu__item_brands"><a href="#">бренды</a></li>
+              <li class="main-menu__item main-menu__item_new"><a href="#">новинки</a></li>
             </ul>
           </div>
         </nav>
         <div class="dropped-menu">
           <div class="wrapper">
             <div class="dropped-menu__lists dropped-menu__lists_women">
-              <h3 class="dropped-menu__list-title">ПОВОД:</h3>
+              <h3 class="dropped-menu__list-title">повод:</h3>
               <ul class="dropped-menu__list">
                 <li class="dropped-menu__item"><a href="#">Офис</a></li>
                 <li class="dropped-menu__item"><a href="#">Вечеринка</a></li>
@@ -115,7 +111,7 @@
               </ul>
             </div>
             <div class="dropped-menu__lists dropped-menu__lists_three-coloumns">
-              <h3 class="dropped-menu__list-title">КАТЕГОРИИ:</h3>
+              <h3 class="dropped-menu__list-title">категории:</h3>
               <ul class="dropped-menu__list">
                 <li class="dropped-menu__item"><a href="#">Балетки</a></li>
                 <li class="dropped-menu__item"><a href="#">Босоножки</a></li>
@@ -136,7 +132,7 @@
               </ul>
             </div>
             <div class="dropped-menu__lists">
-              <h3 class="dropped-menu__list-title">СЕЗОН:</h3>
+              <h3 class="dropped-menu__list-title">сезон:</h3>
               <ul class="dropped-menu__list">
                 <li class="dropped-menu__item"><a href="#">Зима</a></li>
                 <li class="dropped-menu__item"><a href="#">Весна</a></li>
@@ -145,7 +141,7 @@
               </ul>
             </div>
             <div class="dropped-menu__lists">
-              <h3 class="dropped-menu__list-title">БРЕНДЫ:</h3>
+              <h3 class="dropped-menu__list-title">бренды:</h3>
               <ul class="dropped-menu__list">
                 <li class="dropped-menu__item"><a href="#">Albano</a></li>
                 <li class="dropped-menu__item"><a href="#">Ballin</a></li>
@@ -169,7 +165,7 @@
         <main class="product-catalogue product-catalogue_favorite">
           <section class="product-catalogue__head product-catalogue__head_favorite">
             <div class="product-catalogue__section-title">
-              <h2 class="section-name">В ВАШЕМ ИЗБРАННОМ</h2><span class="amount amount_favorite"> 99 товаров</span>
+              <h2 class="section-name">В вашем избранном</h2><span class="amount amount_favorite"> 99 товаров</span>
             </div>
             <div class="product-catalogue__sort-by">
               <p class="sort-by">Сортировать</p>
@@ -180,7 +176,7 @@
               </select>
             </div>
           </section>
-          <section class="product-catalogue__item-list product-catalogue__item-list_favorite"><a class="item-list__item-card item" href="#">
+          <section class="product-catalogue__item-list product-catalogue__item-list_favorite"><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-1" src="img/catalogue-pics/product-catalogue__item-1.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -212,7 +208,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-3" src="img/catalogue-pics/product-catalogue__item-3.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -228,7 +224,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-4" src="img/catalogue-pics/product-catalogue__item-4.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -244,7 +240,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-5" src="img/catalogue-pics/product-catalogue__item-5.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -260,7 +256,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-6" src="img/catalogue-pics/product-catalogue__item-6.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -276,7 +272,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-7" src="img/catalogue-pics/product-catalogue__item-7.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -292,7 +288,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-8" src="img/catalogue-pics/product-catalogue__item-8.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -308,7 +304,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-9" src="img/catalogue-pics/product-catalogue__item-9.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -324,7 +320,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-10" src="img/catalogue-pics/product-catalogue__item-10.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -340,7 +336,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-11" src="img/catalogue-pics/product-catalogue__item-11.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -356,7 +352,7 @@
                   <p class="sizes__title">Размеры в наличии:</p>
                   <p class="sizes__avalible">36, 37, 38, 39, 40, 41, 42</p>
                 </div>
-              </div></a><a class="item-list__item-card item" href="#">
+              </div></a><a class="item-list__item-card item" href="product-card-desktop.html">
               <div class="item-pic"><img class="item-pic-12" src="img/catalogue-pics/product-catalogue__item-12.png" alt="">
                 <div class="product-catalogue__product_favorite">
                   <p></p>
@@ -393,7 +389,7 @@
       <footer class="footer">
         <section class="subscribe">
           <div class="subscribe__wrapper">
-            <h2 class="subscribe__title">ПОДПИСАТЬСЯ НА РАССЫЛКУ ВЫГОДНЫХ ПРЕДЛОЖЕНИЙ</h2>
+            <h2 class="subscribe__title">подписаться на рассылку выгодных предложений</h2>
             <form class="subscribe__radios" action="">
               <label class="subscribe__radio_label">
                 <input class="subscribe__radio" type="radio" name="subscribe" value="women">
