--- a/BosaNoga/index.html
+++ b/BosaNoga/index.html
@@ -39,7 +39,7 @@
       <div class="header-main">
         <div class="header-main__wrapper wrapper">
           <div class="header-main__phone">
-            <a href="tel:++7-495-790-35-03">+7 495 79 03 5 03</a>
+            <a href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
             <p>Ежедневно: с 09-00 до 21-00</p>
           </div>
           <div class="header-main__logo">
@@ -83,8 +83,8 @@
             <div class="basket-dropped__title">В вашей корзине:</div>
             <div class="basket-dropped__product-list product-list">
               <div class="product-list__item">
-                <div class="product-list__pic">
-                  <img src="img/product-list__pic_1.jpg" alt="product"> </div>
+                <a class="product-list__pic">
+                  <img src="img/product-list__pic_1.jpg" alt="product"> </a>
                 <a href="#" class="product-list__product">Ботинки женские, Baldinini</a>
                 <div class="product-list__fill"></div>
                 <div class="product-list__price">12 360
@@ -96,8 +96,8 @@
               </div>
 
               <div class="product-list__item">
-                <div class="product-list__pic">
-                  <img src="img/product-list__pic_1.jpg" alt="product"> </div>
+                <a class="product-list__pic">
+                  <img src="img/product-list__pic_1.jpg" alt="product"> </a>
                 <a href="#" class="product-list__product">Ботинки женские, Baldinini</a>
                 <div class="product-list__fill"></div>
                 <div class="product-list__price">12 360
@@ -108,8 +108,8 @@
                 </div>
               </div>
               <div class="product-list__item">
-                <div class="product-list__pic">
-                  <img src="img/product-list__pic_1.jpg" alt="product"> </div>
+                <a class="product-list__pic">
+                  <img src="img/product-list__pic_1.jpg" alt="product"> </a>
                 <a href="#" class="product-list__product">Ботинки женские, Baldinini</a>
                 <div class="product-list__fill"></div>
                 <div class="product-list__price">12 360
@@ -120,8 +120,8 @@
                 </div>
               </div>
               <div class="product-list__item">
-                <div class="product-list__pic">
-                  <img src="img/product-list__pic_1.jpg" alt="product"> </div>
+                <a class="product-list__pic">
+                  <img src="img/product-list__pic_1.jpg" alt="product"> </a>
                 <a href="#" class="product-list__product">Ботинки женские, Baldinini</a>
                 <div class="product-list__fill"></div>
                 <div class="product-list__price">12 360
@@ -141,28 +141,28 @@
         <div class="wrapper">
           <ul class="main-menu__items">
             <li class="main-menu__item main-menu__item_sales">
-              <a href="#">АКЦИИ</a>
+              <a href="#">Акции</a>
             </li>
             <li class="main-menu__item main-menu__item_women">
-              <a href="#">ЖЕНСКАЯ ОБУВЬ</a>
+              <a href="#">Женская обувь</a>
             </li>
             <li class="main-menu__item main-menu__item_men">
-              <a href="#">МУЖСКАЯ ОБУВЬ</a>
+              <a href="#">Мужская обувь</a>
             </li>
             <li class="main-menu__item main-menu__item_kids">
-              <a href="#">ДЕТСКАЯ ОБУВЬ</a>
+              <a href="#">Детская обувь</a>
             </li>
             <li class="main-menu__item main-menu__item_accessories">
-              <a href="#">АКСЕССУАРЫ</a>
+              <a href="#">Аксессуары</a>
             </li>
             <li class="main-menu__item main-menu__item_home">
-              <a href="#">ДЛЯ ДОМА</a>
+              <a href="#">Для дома</a>
             </li>
             <li class="main-menu__item main-menu__item_brands">
-              <a href="#">БРЕНДЫ</a>
+              <a href="#">Бренды</a>
             </li>
             <li class="main-menu__item main-menu__item_new">
-              <a href="#">НОВИНКИ</a>
+              <a href="#">Новинки</a>
             </li>
           </ul>
         </div>
@@ -171,7 +171,7 @@
       <div class="dropped-menu">
         <div class="wrapper">
           <div class="dropped-menu__lists dropped-menu__lists_women">
-            <h3 class="dropped-menu__list-title">ПОВОД:</h3>
+            <h3 class="dropped-menu__list-title">Повод:</h3>
             <ul class="dropped-menu__list">
               <li class="dropped-menu__item">
                 <a href="#">Офис</a>
@@ -197,7 +197,7 @@
             </ul>
           </div>
           <div class="dropped-menu__lists dropped-menu__lists_three-coloumns">
-            <h3 class="dropped-menu__list-title">КАТЕГОРИИ:</h3>
+            <h3 class="dropped-menu__list-title">Категории:</h3>
             <ul class="dropped-menu__list">
               <li class="dropped-menu__item">
                 <a href="#">Балетки</a>
@@ -250,7 +250,7 @@
             </ul>
           </div>
           <div class="dropped-menu__lists">
-            <h3 class="dropped-menu__list-title">СЕЗОН:</h3>
+            <h3 class="dropped-menu__list-title">Сезон:</h3>
             <ul class="dropped-menu__list">
               <li class="dropped-menu__item">
                 <a href="#">Зима</a>
@@ -267,7 +267,7 @@
             </ul>
           </div>
           <div class="dropped-menu__lists">
-            <h3 class="dropped-menu__list-title">БРЕНДЫ:</h3>
+            <h3 class="dropped-menu__list-title">Бренды:</h3>
             <ul class="dropped-menu__list">
               <li class="dropped-menu__item">
                 <a href="#">Albano</a>
@@ -320,29 +320,29 @@
             <button class="slider__circle" value="2"></button>
             <button class="slider__circle" value="3"></button>
           </div>
-          <h2 class="h2">К ВЕСНЕ ГОТОВЫ!</h2>
+          <h2 class="h2">К весне готовы!</h2>
         </div>
       </div>
     </section>
 
     <section class="new-deals wave-bottom">
-      <h2 class="h2">НОВИНКИ</h2>
+      <h2 class="h2">Новинки</h2>
       <div class="new-deals__menu">
         <ul class="new-deals__menu-items">
           <li class="new-deals__menu-item new-deals__menu-item_active">
-            <a href="#">ЖЕНСКАЯ ОБУВЬ</a>
+            <a href="#">Женская обувь</a>
           </li>
           <li class="new-deals__menu-item">
-            <a href="#">МУЖСКАЯ ОБУВЬ</a>
+            <a href="#">Мужская обувь</a>
           </li>
           <li class="new-deals__menu-item">
-            <a href="#">ДЕТCКАЯ ОБУВЬ</a>
+            <a href="#">Детская обувь</a>
           </li>
           <li class="new-deals__menu-item">
-            <a href="#">АКСЕССУАРЫ</a>
+            <a href="#">аксессуары</a>
           </li>
           <li class="new-deals__menu-item">
-            <a href="#">ДЛЯ ДОМА</a>
+            <a href="#">для дома</a>
           </li>
         </ul>
       </div>
@@ -362,7 +362,7 @@
         <div class="new-deals__arrow new-deals__arrow_right arrow"></div>
       </div>
       <div class="new-deals__product-info">
-        <h3 class="h3">Босоножки женские</h3>
+        <a href="product-card-desktop.html" class="h3">Босоножки женские</a>
         <p>Производитель:
           <span>Damlax</span>
         </p>
@@ -371,24 +371,24 @@
     </section>
 
     <section class="sales-and-news wave-bottom">
-      <h2 class="h2">АКЦИИ И НОВОСТИ</h2>
+      <h2 class="h2">акции и новости</h2>
       <div class="sales-and-news__items">
         <div class="sales-and-news__item sales-and-news__item_1">
           <a href="#">
-            <h3 class="h3">ОБУВЬ К СВАДЬБЕ</h3>
+            <h3 class="h3">обувь к свадьбе</h3>
           </a>
         </div>
         <div class="sales-and-news__item sales-and-news__item_2">
           <a href="#">
-            <h3 class="h3">20% СКИДКА
+            <h3 class="h3">20% скидка
               <br>
-              <span>НА ЛЕТНЮЮ ОБУВЬ</span>
+              <span>На летнюю обувь</span>
             </h3>
           </a>
         </div>
         <div class="sales-and-news__item sales-and-news__item_3">
           <a href="#">
-            <h3 class="h3">ГОТОВИМСЯ К ЛЕТУ!</h3>
+            <h3 class="h3">готовимся к лету!</h3>
           </a>
         </div>
         <div class="sales-and-news__item sales-and-news__item_4">
@@ -442,13 +442,13 @@
       вы сможете быть модным и стильным как осенью-зимой, так и весной-летом. Просто наберите номер нашего телефона, и мы
       поможем вам определиться с покупкой.</p>
       <span class="about-us__text_overlay"></span>
-      <button class="about-us__text_button">ЧИТАТЬ</button>
+      <button class="about-us__text_button">читать</button>
     </section>
 
     <footer class="footer">
       <section class="subscribe">
         <div class="subscribe__wrapper">
-          <h2 class="subscribe__title">ПОДПИСАТЬСЯ НА РАССЫЛКУ ВЫГОДНЫХ ПРЕДЛОЖЕНИЙ</h2>
+          <h2 class="subscribe__title">подписаться на рассылку выгодных предложений</h2>
           <form class="subscribe__radios" action="">
             <label class="subscribe__radio_label">
               <input class="subscribe__radio" type="radio" name="subscribe" value="women">
@@ -459,7 +459,7 @@
               <div class="subscribe__radio_text">Мужское</div>
             </label>
             <label class="subscribe__radio_label">
-              <input class="subscribe__radio" type="radio" name="subscribe" value="both" checked>
+              <input class="subscribe__radio" type="radio" name="subscribe" value="both" checked="">
               <div class="subscribe__radio_text">Всё</div>
             </label>
             <input class="subscribe__email" type="email" placeholder="Ваш e-mail">
@@ -470,44 +470,25 @@
       <div class="footer__bottom">
         <div class="wrapper">
           <div class="footer__menus">
-            <div class="footer__menu footer__menu_about">
-              О магазине
+            <div class="footer__menu footer__menu_about">О магазине
               <ul>
-                <li>
-                  <a href="#">BosaNoga</a>
-                </li>
-                <li>
-                  <a href="#">Новости</a>
-                </li>
-                <li>
-                  <a href="#">Пресса</a>
-                </li>
+                <li><a href="#">BosaNoga</a></li>
+                <li><a href="#">Новости</a></li>
+                <li><a href="#">Пресса</a></li>
               </ul>
             </div>
             <div class="footer__menu footer__menu_collection">Коллекции
               <ul>
-                <li>
-                  <a href="#">Обувь</a>
-                </li>
-                <li>
-                  <a href="#">Аксессуары</a>
-                </li>
-                <li>
-                  <a href="#">Для дома</a>
-                </li>
+                <li><a href="#">Обувь</a></li>
+                <li><a href="#">Аксессуары</a></li>
+                <li><a href="#">Для дома</a></li>
               </ul>
             </div>
             <div class="footer__menu footer__menu_help">Помощь
               <ul>
-                <li>
-                  <a href="#">Как купить?</a>
-                </li>
-                <li>
-                  <a href="#">Возврат</a>
-                </li>
-                <li>
-                  <a href="#">Контакты</a>
-                </li>
+                <li><a href="#">Как купить?</a></li>
+                <li><a href="#">Возврат</a></li>
+                <li><a href="#">Контакты</a></li>
               </ul>
             </div>
           </div>
@@ -522,18 +503,14 @@
               <div class="footer__paid footer__paid_qiwi"></div>
             </div>
             <div class="footer__social-links">
-              <h3 class="footer__social-links_title">Мы в соц.сетях:
-              </h3>
+              <h3 class="footer__social-links_title">Мы в соц.сетях:</h3>
               <div class="footer__social-link footer__social-link_twitter"></div>
               <div class="footer__social-link footer__social-link_vk"></div>
             </div>
-            <div class="footer__copyright">2009-2018 © BosaNoga.ru — модный интернет-магазин обуви
-              <br> и аксессуаров. Все права защищены. Доставка по всей России!</div>
+            <div class="footer__copyright">2009-2018 © BosaNoga.ru — модный интернет-магазин обуви<br> и аксессуаров. Все права защищены. Доставка по всей России!</div>
           </div>
-          <div class="footer__contacts">
-            <a class="footer__phone" href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
-            <p class="footer__phone_text">Ежедневно: с 09-00 до 21-00</p>
-            <a class="footer__email" href="mailto:office@bosanoga.ru">office@bosanoga.ru</a>
+          <div class="footer__contacts"><a class="footer__phone" href="tel:+7-495-790-35-03">+7 495 79 03 5 03</a>
+            <p class="footer__phone_text">Ежедневно: с 09-00 до 21-00</p><a class="footer__email" href="mailto:office@bosanoga.ru">office@bosanoga.ru</a>
           </div>
         </div>
       </div>
