--- a/BosaNoga/catalogue.html
+++ b/BosaNoga/catalogue.html
@@ -161,12 +161,12 @@
     </header>
     <!-- Каталог товаров -->
     <!-- Breadcrumbs -->
-    <section class="product-catalogue__breadcrumb-container">
-      <ul class="breadcrumb-container__breadcrumbs">
-        <li><a href="#">Главная</a></li> <span class="angle"></span>
-        <li><a href="#">Женская обувь</a></li>
+    <div class="site-path">
+      <ul class="site-path__items">
+        <li class="site-path__item"><a href="index.html">Главная</a></li>
+        <li class="site-path__item"><a href="#">Женская обувь</a></li>
       </ul>
-    </section>
+    </div>
     <!-- Тело каталога с сайдбаром -->
     <main class="product-catalogue">
       <!-- Сайдбар -->
@@ -609,19 +609,19 @@
       <div class="overlooked-slider">
         <div class="overlooked-slider__arrow overlooked-slider__arrow_left arrow"></div>
         <div class="overlooked-slider__item overlooked-slider__item-1">
-          <a href="#"></a>
+          <a href="product-card-desktop.html"></a>
         </div>
         <div class="overlooked-slider__item overlooked-slider__item-2">
-          <a href="#"></a>
+          <a href="product-card-desktop.html"></a>
         </div>
         <div class="overlooked-slider__item overlooked-slider__item-3">
-          <a href="#"></a>
+          <a href="product-card-desktop.html"></a>
         </div>
         <div class="overlooked-slider__item overlooked-slider__item-4">
-          <a href="#"></a>
+          <a href="product-card-desktop.html"></a>
         </div>
         <div class="overlooked-slider__item overlooked-slider__item-5">
-          <a href="#"></a>
+          <a href="product-card-desktop.html"></a>
         </div>
         <div class="overlooked-slider__arrow overlooked-slider__arrow_right arrow"></div>
       </div>
