--- a/BosaNoga/order.html
+++ b/BosaNoga/order.html
@@ -156,7 +156,7 @@
       <div class="wrapper order-wrapper">                  
         <div class="site-path">
           <ul class="site-path__items">
-            <li class="site-path__item"><a href="#">Главная</a></li>
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
             <li class="site-path__item"><a href="#">Корзина</a></li>
             <li class="site-path__item"><a href="#">Оформление заказа</a></li>
           </ul>
