--- a/BosaNoga/order_done.html
+++ b/BosaNoga/order_done.html
@@ -156,9 +156,9 @@
       <div class="wrapper order-wrapper">                  
         <div class="site-path">
           <ul class="site-path__items">
-            <li class="site-path__item"><a href="#">Главная</a></li>
+            <li class="site-path__item"><a href="index.html">Главная</a></li>
             <li class="site-path__item"><a href="#">Корзина</a></li>
-            <li class="site-path__item"><a href="#">Оформление заказа</a></li>
+            <li class="site-path__item"><a href="order.html">Оформление заказа</a></li>
             <li class="site-path__item"><a href="#">Заказ принят</a></li>
           </ul>
         </div>
