--- a/BosaNoga/product-card-desktop.html
+++ b/BosaNoga/product-card-desktop.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>БОТИНКИ ЖЕНСКИЕ BD0677C</title>
+  <title>Ботинки женские BD0677C</title>
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/font-awesome.min.css">
   <link rel="stylesheet" href="css/style.css">
@@ -163,14 +163,14 @@
     
     <!-- Карточка товара -->
 			<!-- Breadcrumbs -->
-    <section class="product-card__breadcrumb-container">
-      <ul class="breadcrumb-container__breadcrumbs">
-        <li><a href="#">Главная</a></li> <span class="angle"></span>
-        <li><a href="#">Женская обувь</a></li> <span class="angle"></span>
-        <li><a href="#">Ботинки</a></li> <span class="angle"></span>
-        <li><a href="#">Ботинки женские</a></li>
+    <div class="site-path">
+      <ul class="site-path__items">
+        <li class="site-path__item"><a href="index.html">Главная</a></li>
+        <li class="site-path__item"><a href="#">Женская обувь</a></li>
+        <li class="site-path__item"><a href="#">Ботинки</a></li>
+        <li class="site-path__item"><a href="#">Ботинки женские</a></li>
       </ul>
-    </section>
+    </div>
     <!-- Тело карточки товара -->
     <main class="product-card">
 					<section class="product-card-content">
