--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -44,7 +44,7 @@
         </div>
         <div class="header__hidden-menu hidden-menu">
           <div class="wrapper header__wrapper">
-            <div class="hidden-menu__logo"><img src="img/logo_blue-orange.png" alt=""/></div>
+            <div class="hidden-menu__logo"><a href="index.html"><img src="img/logo_blue-orange.png" alt=""/></a></div>
             <div class="hidden-menu__popups top-block__popups">
               <div class="hidden-menu__item top-block__item"> 
                 <input type="text" placeholder="Поиск..."/><i class="fa fa-search" aria-hidden="true"></i>
@@ -60,7 +60,7 @@
         </div>
         <div class="header__menu menu-block">
           <div class="wrapper header__wrapper">
-            <div class="menu-block__logo"><img src="img/logo_white.png" alt=""/><i class="fa fa-search" aria-hidden="true"></i></div>
+            <h1 class="menu-block__logo"><a href="index.html"><img src="img/logo_white.png" alt=""/></a><i class="fa fa-search" aria-hidden="true"></i></h1>
             <div class="menu-block__menu-pic"></div>
             <div class="menu-block__contacts contacts">
               <div class="contacts__item">
