--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -333,43 +333,43 @@
               <li>
                 <label>
 
-                  <input class="country__checkbox" type="checkbox" name="США"/><span class="checkbox-custom"></span><span class="label">США</span>
+                  <input class="custom__checkbox" type="checkbox" name="США"/><span class="checkbox-custom"></span><span class="label">США</span>
 
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Канада"/><span class="checkbox-custom"></span><span class="label">Канада</span>
+                  <input class="custom__checkbox" type="checkbox" name="Канада"/><span class="checkbox-custom"></span><span class="label">Канада</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Австралия"/><span class="checkbox-custom"></span><span class="label">Австралия</span>
+                  <input class="custom__checkbox" type="checkbox" name="Австралия"/><span class="checkbox-custom"></span><span class="label">Австралия</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Новая Зеландия"/><span class="checkbox-custom"></span><span class="label">Новая Зеландия</span>
+                  <input class="custom__checkbox" type="checkbox" name="Новая Зеландия"/><span class="checkbox-custom"></span><span class="label">Новая Зеландия</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Сингапур"/><span class="checkbox-custom"></span><span class="label">Сингапур</span>
+                  <input class="custom__checkbox" type="checkbox" name="Сингапур"/><span class="checkbox-custom"></span><span class="label">Сингапур</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Япония"/><span class="checkbox-custom"></span><span class="label">Япония</span>
+                  <input class="custom__checkbox" type="checkbox" name="Япония"/><span class="checkbox-custom"></span><span class="label">Япония</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Корея" checked=""/><span class="checkbox-custom"></span><span class="label">Корея</span>
+                  <input class="custom__checkbox" type="checkbox" name="Корея" checked=""/><span class="checkbox-custom"></span><span class="label">Корея</span>
                 </label>
               </li>
               <li>
                 <label>
-                  <input class="country__checkbox" type="checkbox" name="Филиппины"/><span class="checkbox-custom"></span><span class="label">Филиппины</span>
+                  <input class="custom__checkbox" type="checkbox" name="Филиппины"/><span class="checkbox-custom"></span><span class="label">Филиппины</span>
                 </label>
               </li>
             </ul><a class="show-all" href="#">Показать все</a>
