--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/content.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script src="https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -644,7 +645,6 @@
           </div>
         </div>
       </footer>
-      <script src="js/script.js"></script>
       <script src="js/header.js"></script>
       <script src="js/slider.js"></script>
       <script src="js/select.js"></script>
