--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -39,22 +39,7 @@
             <div class="top-block__fill"></div>
             <div class="top-block__phone">8 800 737-77-05</div>
             <div class="top-block__popups">
-              <div class="top-block__item top-block__item_login">Вход/ Регистрация<i class="fa fa-user" aria-hidden="true"></i>
-                <section class="chosen">
-                  <div class="row row1">
-                    <h2 class="chosen-content__title">Вы не зарегистрированы</h2><a class="chosen-content__close" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
-                  </div>
-                  <div class="row row2">
-                    <p class="chosen-content__desc">Зарегистрируйтесь или войдите в личный кабинет, чтобы иметь возможность пользоваться всеми функциями сайта.</p>
-                  </div>
-                  <div class="row row3">
-                    <ul class="chosen-content-ulist">
-                      <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__sign" href="#">зарегистрироваться</a></li>
-                      <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__login" href="#">войти в аккаунт</a></li>
-                    </ul>
-                  </div>
-                </section>
-              </div>
+              <div class="top-block__item top-block__item_login">Вход/ Регистрация<i class="fa fa-user" aria-hidden="true"></i></div>
               <div class="top-block__item top-block__item_favorite">10<i class="fa fa-star" aria-hidden="true"></i></div>
               <div class="top-block__item top-block__item_cart">2500 р<i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
             </div>
@@ -170,11 +155,13 @@
         </div>
       </header>
       <section class="slider slider__schools">
-        <div class="slider__site-path site-path"> 
-          <ul class="site-path__items">
-            <li class="site-path__item"><a href="#">Главная</a></li>
-            <li class="site-path__item"><a href="#">Школы</a></li>
-          </ul>
+        <div class="wrapper slider__wrapper">
+          <div class="slider__site-path site-path"> 
+            <ul class="site-path__items">
+              <li class="site-path__item"><a href="#">Главная</a></li>
+              <li class="site-path__item"><a href="#">Школы</a></li>
+            </ul>
+          </div>
         </div>
         <div class="slider__items">
           <div class="slider__item slider__item_1 slide">
@@ -196,13 +183,15 @@
             </div>
           </div>
         </div>
-        <div class="slider__navigation slider-navigation">
-          <div class="slider-navigation__count slider-navigation__count_this">01</div>
-          <div class="slider-navigation__count slider-navigation__count_all">04</div>
-          <div class="slider-navigation__fill"></div>
-          <div class="slider-navigation__arrows">
-            <div class="slider-navigation__arrow slider-navigation__arrow_left"></div>
-            <div class="slider-navigation__arrow slider-navigation__arrow_right"></div>
+        <div class="wrapper slider__wrapper">
+          <div class="slider__navigation slider-navigation">
+            <div class="slider-navigation__count slider-navigation__count_this">01</div>
+            <div class="slider-navigation__count slider-navigation__count_all">04</div>
+            <div class="slider-navigation__fill"></div>
+            <div class="slider-navigation__arrows">
+              <div class="slider-navigation__arrow slider-navigation__arrow_left"></div>
+              <div class="slider-navigation__arrow slider-navigation__arrow_right"></div>
+            </div>
           </div>
         </div>
       </section>
@@ -610,20 +599,18 @@
               <div class="footer-logo"></div></a>
             <button class="button__action franchise" type="button" value=""><a href="#">приобрести франшизу</a></button>
           </div>
-          <div class="footer-menu__wrapper">
-            <nav class="footer-menu__items">
-              <div class="items_block-1">
-                <div class="footer-menu__item"> <a href="#">о компании</a></div>
-                <div class="footer-menu__item"><a href="#">программы</a></div>
-                <div class="footer-menu__item"><a href="#">услуги</a></div>
-              </div>
-              <div class="items_block-2">
-                <div class="footer-menu__item"><a href="#">страны</a></div>
-                <div class="footer-menu__item"><a href="#">школы</a></div>
-                <div class="footer-menu__item"><a href="#">контакты</a></div>
-              </div>
-            </nav>
-          </div>
+          <nav class="footer-menu__items">
+            <div class="items_block-1">
+              <div class="footer-menu__item"> <a href="#">о компании</a></div>
+              <div class="footer-menu__item"><a href="#">программы</a></div>
+              <div class="footer-menu__item"><a href="#">услуги</a></div>
+            </div>
+            <div class="items_block-2">
+              <div class="footer-menu__item"><a href="#">страны</a></div>
+              <div class="footer-menu__item"><a href="#">школы</a></div>
+              <div class="footer-menu__item"><a href="#">контакты</a></div>
+            </div>
+          </nav>
           <div class="footer__contacts"><a class="footer__phone" href="tel:8-800-737-77-05">8 800 737-77-05</a>
             <button class="button__action free-line" type="button" value=""><a href="#">бесплатная линия</a></button>
             <div class="footer__social-links"><a href="#">
@@ -645,6 +632,20 @@
           </div>
         </div>
       </footer>
+      <section class="chosen">
+        <div class="row row1">
+          <h2 class="chosen-content__title">Вы не зарегистрированы</h2><a class="chosen-content__close" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+        </div>
+        <div class="row row2">
+          <p class="chosen-content__desc">Зарегистрируйтесь или войдите в личный кабинет, чтобы иметь возможность пользоваться всеми функциями сайта.</p>
+        </div>
+        <div class="row row3">
+          <ul class="chosen-content-ulist">
+            <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__sign" href="#">зарегистрироваться</a></li>
+            <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__login" href="#">войти в аккаунт</a></li>
+          </ul>
+        </div>
+      </section>
       <script src="js/header.js"></script>
       <script src="js/slider.js"></script>
       <script src="js/select.js"></script>
