--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -47,7 +47,7 @@
         </div>
         <div class="header__hidden-menu hidden-menu">
           <div class="wrapper header__wrapper">
-            <div class="hidden-menu__logo"><a href="index.html"><img src="img/logo_blue-orange.svg" alt="logo"/></a></div>
+            <div class="hidden-menu__logo" id="logo_hidden"><a href="index.html"><img src="img/logo_blue-orange.svg" alt="logo"/></a></div>
             <div class="hidden-menu__popups top-block__popups">
               <div class="hidden-menu__item hidden-menu__item_input top-block__item"> 
                 <input type="text" placeholder="Поиск..."/><i class="fa fa-search" aria-hidden="true"></i>
@@ -650,6 +650,7 @@
       <script src="js/slider.js"></script>
       <script src="js/select.js"></script>
       <script src="js/filter.js"></script>
+      <script src="js/favorite.js"></script>
     </div>
   </body>
 </html>
