--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -165,19 +165,19 @@
         </div>
         <div class="slider__items">
           <div class="slider__item slider__item_1 slide">
-            <div class="wrapper">
+            <div class="wrapper slide__wrapper">
               <h2 class="slide__title">Fanshawe college</h2>
               <p class="slide__description">набор на новый учебный год</p><a class="slide__button" href="#">подробнее</a>
             </div>
           </div>
           <div class="slider__item slider__item_2 slide">
-            <div class="wrapper">
+            <div class="wrapper slide__wrapper">
               <h2 class="slide__title">St. John's University</h2>
               <p class="slide__description">набор на новый учебный год</p><a class="slide__button" href="#">подробнее</a>
             </div>
           </div>
           <div class="slider__item slider__item_3 slide">
-            <div class="wrapper">
+            <div class="wrapper slide__wrapper">
               <h2 class="slide__title">University of New South</h2>
               <p class="slide__description">набор на новый учебный год</p><a class="slide__button" href="#">подробнее</a>
             </div>
@@ -198,7 +198,7 @@
       <div class="title">
         <div class="wrapper title__wrapper">
           <h2 class="section-name">школы</h2>
-          <form>
+          <form class="school-select">
             <select>
               <option>Показать по 9</option>
               <option>9</option>
@@ -215,7 +215,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-prog">Программа
                   <div class="sidebar-arrow arrow-prog"></div>
-                </h3>
+                </h3><a class="sidebar-header-adaptive" href="#" type="button">Программа</a>
                 <ul class="choose-program__checkboxes">
                   <li>
                     <label>
@@ -277,7 +277,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-spec">Специальности
                   <div class="sidebar-arrow arrow-spec"></div>
-                </h3>
+                </h3><a class="sidebar-header-adaptive" href="#" type="button">Специальности</a>
                 <ul class="choose-specialty__checkboxes">
                   <li>
                     <label>
@@ -339,7 +339,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-count">Страны
                   <div class="sidebar-arrow arrow-count"></div>
-                </h3>
+                </h3><a class="sidebar-header-adaptive" href="#" type="button">Страны</a>
                 <ul class="choose-country__checkboxes">
                   <li>
                     <label>
@@ -585,7 +585,7 @@
                     <button class="button__action more hover" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
-              </div>
+              </div><a class="show-more" href="#">Показать еще</a>
             </main>
           </div>
         </div>
@@ -623,8 +623,8 @@
         <div class="footer__bottom">
           <div class="wrapper footer__wrapper">
             <div class="footer__copyright">
-              <p></p><span class="comp-name">OOO «Экселенте», 2018 г.</span><br/>
-              <p>Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
+              <p class="copyright"><span class="comp-name">OOO «Экселенте», 2018 г.</span></p><br/>
+              <p class="license">Лицензия ФМС МВД РФ № 20110251124 от 13.08.2010 г. бессрочно</p>
             </div>
             <div class="footer__made-by">
               <p>Разработка сайта<a class="developer" href="#">DVIGA</a></p>
