--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <title>Детские туры во время каникул</title>
+    <title>Школы</title>
     <link rel="stylesheet" href="css/font-awesome.min.css"/>
     <link rel="stylesheet" href="css/style.css"/>
     <link rel="stylesheet" href="css/header.css"/>
     <link rel="stylesheet" href="css/slider.css"/>
-    <link rel="stylesheet" href="css/content.css"/>
+    <link rel="stylesheet" href="css/content_schools.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
     <script src="https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js"></script>
@@ -215,7 +215,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-prog">Программа
                   <div class="sidebar-arrow arrow-prog"></div>
-                </h3><a class="sidebar-header-adaptive" href="#" type="button">Программа</a>
+                </h3>
                 <ul class="choose-program__checkboxes">
                   <li>
                     <label>
@@ -277,7 +277,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-spec">Специальности
                   <div class="sidebar-arrow arrow-spec"></div>
-                </h3><a class="sidebar-header-adaptive" href="#" type="button">Специальности</a>
+                </h3>
                 <ul class="choose-specialty__checkboxes">
                   <li>
                     <label>
@@ -339,7 +339,7 @@
               <section class="sidebar__part">
                 <h3 class="sidebar__part-button-count">Страны
                   <div class="sidebar-arrow arrow-count"></div>
-                </h3><a class="sidebar-header-adaptive" href="#" type="button">Страны</a>
+                </h3>
                 <ul class="choose-country__checkboxes">
                   <li>
                     <label>
@@ -471,7 +471,7 @@
                       <input class="custom__checkbox" type="checkbox" name=""/><span class="checkbox-custom"></span><span class="label">Франция</span>
                     </label>
                   </li>
-                </ul><a class="show-all" href="#">Показать все</a>
+                </ul><a class="show-all" href="#">показать все</a>
                 <section class="sidebar__part filters">
                   <button class="button__action apply" type="button" value=""><a href="#">Применить</a></button><a class="reset-filter" href="#">Сбросить фильтр</a>
                 </section>
@@ -585,13 +585,13 @@
                     <button class="button__action more hover" type="button" value=""><a href="#">подробнее</a></button>
                   </div>
                 </div>
-              </div><a class="show-more" href="#">Показать еще</a>
+              </div><a class="show-more" href="#">Показать еще			</a>
+              <nav class="schools-catalogue__pagination">
+                <div class="pagi-nav-wrapper"><a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="">...</a><a href="#">125</a><a class="pagi-arrow pagi-arrow-forward" href="#"></a></div>
+              </nav>
             </main>
           </div>
         </div>
-        <nav class="schools-catalogue__pagination">
-          <div class="pagi-nav-wrapper"><a href="#">1</a><a href="#">2</a><a href="#">3</a><a href="#">4</a><a href="">...</a><a href="#">125</a><a class="pagi-arrow pagi-arrow-forward" href="#"></a></div>
-        </nav>
       </section>
       <footer class="footer">
         <div class="footer__top">
