--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/content_schools.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
-    <script src="https://raw.githubusercontent.com/LeaVerou/prefixfree/gh-pages/prefixfree.min.js"></script>
   </head>
   <body>
     <div class="container">
@@ -643,6 +642,18 @@
           <ul class="chosen-content-ulist">
             <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__sign" href="#">зарегистрироваться</a></li>
             <li class="chosen-content-ulist-list"><a class="chosen-content-ulist-list__login" href="#">войти в аккаунт</a></li>
+          </ul>
+        </div>
+      </section>
+      <section class="basket">
+        <div class="row">
+          <h2 class="basket-content__title">В корзине</h2><a class="basket-content__close" href="#"><i class="fa fa-times" aria-hidden="true"></i></a>
+        </div>
+        <div class="row"><a class="basket-content__desc" href="#">Летние каникулы в Christ’s Hospital School</a></div>
+        <div class="row">
+          <ul class="basket-content-ulist">
+            <li class="basket-content-ulist-list"><a class="basket-content-ulist-list__sign" href="#">Перейти в корзину</a></li>
+            <li class="basket-content-ulist-list"><a class="basket-content-ulist-list__login" href="#">продолжить покупки</a></li>
           </ul>
         </div>
       </section>
