--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/content_schools.css"/>
     <link rel="stylesheet" href="css/footer.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
+    <script href="js/prefixfree.min.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
