--- a/exelente_ru/index.html
+++ b/exelente_ru/index.html
@@ -503,7 +503,7 @@
             </section>
             <section class="sidebar__part">
               <h3 class="sidebar__part-button-count">Страны
-                <div class="sidebar-arrow arrow-count"></div>
+                <div class="sidebar-arrow arrow-count" style = "transform: rotate(180deg);"></div>
               </h3>
               <ul class="choose-country__checkboxes">
                 <li>
